--- a/application/layouts/includes/nav-main.phtml
+++ b/application/layouts/includes/nav-main.phtml
@@ -48,7 +48,7 @@
                             <input name="label" class="input-medium" id="nav-main-search-field" type="text" placeholder="Rechercher ..." />
                             <input name="page" type="hidden" value="1"  />
                             <button class="btn btn_search" type="submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> </button>
-                            <a class="btn btn-link" href="/search/etablissement?&statuts%5B%5D=2&statuts%5B%5D=4" >Avancée »</a>
+                            <a class="btn btn-link" href="/search/etablissement?&statuts%5B%5D=2&statuts%5B%5D=4">Avancée &raquo;</a>
                         </div>
                     </form>
                 </li>
