--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -1,4 +1,5 @@
 <?php $this->placeholder('lateral_navigation')->captureStart(); // Capture du 'lateral_navigation' ?>
+<!-- @fixme: Revoir le markup -->
 <ul class="nav nav-tabs nav-stacked menu_dashboard">
     <li class="nav-header">Général</li>
 
