--- a/application/views/scripts/search/courriers.phtml
+++ b/application/views/scripts/search/courriers.phtml
@@ -1,9 +1,9 @@
 <!-- Onglets permettant de selectionner les entités à rechercher -->
 <h2 class="page-header">Courriers</h2>
 <form method='get'>
-    <div class='navbar-form form-search well well-small' style='margin-bottom: 5px;'>
+    <div class='navbar-form well well-sm' style='margin-bottom: 5px;'>
         <div class="input-append">
-            <input type="text" name='objet' class="col-md-6 search-query" placeholder="Objet du courrier, de l'expéditeur, ..." value='<?php if(isset($_GET["objet"])) echo $_GET["objet"] ?>' />
+            <input type="text" name='objet' class="col-md-6 form-control" placeholder="Objet du courrier, de l'expéditeur, ..." value='<?php if(isset($_GET["objet"])) echo $_GET["objet"] ?>' />
             <input type='submit' class="btn btn-default" value="Rechercher dans Prevarisc"  />
             <input type='hidden' name='page' value="1" />
         </div>
